Fixed icon link z-index

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,6 +48,7 @@ html {
       top: 198px;
       width: 30px;
       text-align: center;
+      z-index: 1000;
       i{
         color: $blue;
       }
@@ -122,7 +123,7 @@ html {
           font-size: 18px;
       }
       .icon-link{
-        z-index: 1;
+        z-index: 1001;
         i{
           color: $white;
         }
